--- a/shop/templates/shop/_layout.html
+++ b/shop/templates/shop/_layout.html
@@ -462,7 +462,14 @@
                         btn.classList.remove('text-gray-700');
                         btn.classList.add('text-green-600');
                     }
-
+                    fetch("/add_to_cart/"+ id + "/", {method: "POST",headers: {
+                        "X-CSRFToken": getCookie("csrftoken"),
+                    }
+    })
+                    .then(response => response.json())
+                    .then(data => {
+                        alert("Товар додано! В кошику: " + data.cart_count);
+                    });
                     updateCartModal();
                     cartModal.classList.remove('hidden');
                 });
